# SPG_humanoid

./: CMakeLists.txt  debug_demo.cpp  debug_straight_line.cpp  imgui.ini  visualize_tests.sh
demo/: demo_humanoid_mpc.cpp  demo_rotation_test.cpp  humanoid_simulator_demo.cpp  main.cpp
docs/: ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  VISUAL_GUIDE.md
include/: HumanoidSimulator.hpp  SPGSimulator.hpp
include/functions/: sign.hpp
include/spg/: HumanoidTrajectoryGenerator.hpp  HumanoidUtils.hpp  Init.hpp  NextSample.hpp
include/spg/setpoint/: BalanceXY.hpp  CombineSegmentData.hpp  ConvertSegment.hpp  GetSegments.hpp  HumanoidMPC.hpp  Segment.hpp  Set.hpp  SetHumanoid.hpp  Setpoint.hpp  StateCorrection.hpp  Traj1.hpp  TrajPredict.hpp  TrajSegment.hpp  TrajectoryUtils.hpp  Wrap.hpp
include/spg/subtarget/: CheckCollisionFree.hpp  CheckViolation.hpp  Subtarget.hpp  SubtargetSet.hpp
include/spg/subtarget/angle/: AngleUtils.hpp
include/spg/subtarget/replan/: ReplanUtils.hpp
include/spg/subtarget/replan/search/: BesideObstacle.hpp  Random.hpp
include/visualization/: SimulatorVisualizer.hpp
src/: SPGSimulator.cpp
src/functions/: rot.cpp  sign.cpp
src/spg/: Init.cpp  NextSample.cpp
src/spg/setpoint/: BalanceXY.cpp  CombineSegmentData.cpp  ConvertSegment.cpp  GetSegments.cpp  HumanoidMPC.cpp  HumanoidMPC.cpp.backup  Set.cpp  SetHumanoid.cpp  Setpoint.cpp  StateCorrection.cpp  Traj1.cpp  TrajPredict.cpp  TrajSegment.cpp  TrajectoryUtils.cpp  Wrap.cpp
src/spg/subtarget/: CheckCollisionFree.cpp  CheckViolation.cpp  Subtarget.cpp  SubtargetSet.cpp
src/spg/subtarget/angle/: AngleUtils.cpp
src/spg/subtarget/replan/: ReplanUtils.cpp
src/spg/subtarget/replan/search/: BesideObstacle.cpp  Random.cpp
src/visualization/: SimulatorVisualizer.cpp
test/: CMakeLists.txt  humanoid_demo.cpp  test_balanceXY.cpp  test_bouncing_obstacles_integration.cpp  test_determine_setpoint_limits.cpp  test_getSegments.cpp  test_getSegments_functions.cpp  test_humanoid_constraints.cpp  test_humanoid_mpc.cpp  test_move_straight_line.cpp  test_replan_utils.cpp  test_setpoint_set.cpp  test_simple_navigation.cpp  test_static_obstacles_integration.cpp  test_traj1.cpp  test_trajpredict.cpp
